# rotary

./: .gitignore  404.html  BUILD  CMakeLists.txt  CMakePresets.json  WORKSPACE  engine.html  extras.html  index.html  libs.html  sitemap.xml  vcpkg.json
assets/css/: styles.3b61ac3f.css  styles.d66b3a19.css
assets/js/: 03dd4520.27882f0b.js  03dd4520.a528ec2a.js  0e384e19.36fd6210.js  0e384e19.533928c0.js  0e384e19.68deb7ec.js  0e384e19.baa14075.js  0e384e19.ceadfdd9.js  0e384e19.f08f807f.js  0e384e19.f86e31fd.js  17896441.122b720d.js  224a8dc1.1e1ed855.js  272cc21e.21f4739c.js  272cc21e.4ff3e2ec.js  272cc21e.61b6a9d3.js  272cc21e.abe82b90.js  272cc21e.eb9d829e.js  296e5c2d.1c533425.js  30c03d65.edd06345.js  315a1913.d092afa8.js  316.6b10115b.js  49b5e9d7.b1c67ccb.js  49fd02af.1a4c2e1a.js  524a65ab.fa1730b4.js  58d2e76b.036c0efa.js  59818cdb.830373a6.js  724.cf8932bc.js  78a7fada.a786a791.js  78a7fada.ed6c4bff.js  8b02cbd6.bf6d2aca.js  935f2afb.04929854.js  935f2afb.1e8b0480.js  935f2afb.5d8b9416.js  935f2afb.82c38b47.js  a5f93cd8.0ef84d9d.js  a5f93cd8.1e871dbe.js  a5f93cd8.23efe2ca.js  a5f93cd8.4a9ae1ad.js  a5f93cd8.5b9fe0e3.js  aaedbd84.ed16fa69.js  c12430fd.eec39884.js  (+38 more)
data/prototypes/: shader.yaml
docs/: docusaurus.config.js  intro.html  package-lock.json  project-structure.html
docs/docs/: intro.md  project-structure.md
docs/docs/engine/: _category_.json
docs/docs/extras/: _category_.json  player.md  shaderx.md
docs/docs/libs/: _category_.json  plat.md  shcc.md  vtk.md
docs/docs/libs/plat/: _category_.json  filesystem.md  plat.md  vulkan.md  window.md
docs/docs/libs/vtk/: _category_.json  commands.md  extras.md  framebuffer.md  instance.md  lifecycle.md  logical_device.md  physical_device.md  render_pass.md  swapchain.md  vtk.md
docs/engine/: intro.html
docs/extras/: player.html  shaderx.html
docs/libs/: plat.html  shcc.html  vtk.html
docs/src/css/: custom.css
docs/src/pages/: index.js
extras/: player.html  shaderx.html
extras/player/: BUILD  CMakeLists.txt
extras/player/data/: color.frag.glsl  color.frag.spv  color.hlsl  color.vert.glsl  color.vert.spv
extras/player/src/: main.cpp
extras/shaderx/: CMakeLists.txt
extras/shaderx/src/: main.cpp
libs/: plat.html  shcc.html  vtk.html
libs/apl/: CMakeLists.txt
libs/apl/include/apl/: apl.hpp  generator.hpp  manifest.hpp  resource.hpp
libs/apl/src/: generator.cpp  manifest.cpp  resource.cpp
libs/diag/: BUILD
libs/diag/include/diag/: logger.hpp
libs/diag/src/: logger.cpp
libs/plat/: BUILD  CMakeLists.txt  filesystem.html  vulkan.html  window.html
libs/plat/include/plat/: extras.hpp  filesystem.hpp  plat.hpp  vulkan.hpp  window.hpp
libs/plat/src/: extras.cpp  filesystem.cpp  vulkan.cpp  window.cpp
libs/rotary/: BUILD  CMakeLists.txt
libs/rotary/include/rotary/: rotary.hpp
libs/rotary/include/rotary/core/: base.hpp  log.hpp  memory.hpp
libs/rotary/include/rotary/graphics/: graphics.hpp  mesh.hpp  shader.hpp
libs/rotary/include/rotary/io/: file.hpp
libs/rotary/src/core/: log.cpp
libs/rotary/src/graphics/: graphics.cpp
libs/rotary/src/io/: file.cpp
libs/rotary/src/vulkan/: graphics.cpp  graphics.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
libs/shcc/: CMakeLists.txt
libs/shcc/include/shcc/: shcc.hpp
libs/shcc/src/: shcc.cpp
libs/vtk/: BUILD  CMakeLists.txt  commands.html  extras.html  framebuffer.html  instance.html  lifecycle.html  logical_device.html  physical_device.html  render_pass.html  swapchain.html
libs/vtk/include/vtk/: assert.hpp  buffer.hpp  command.hpp  extras.hpp  framebuffer.hpp  instance.hpp  logical_device.hpp  memory.hpp  physical_device.hpp  pipeline.hpp  render_pass.hpp  swapchain.hpp  vtk.hpp
libs/vtk/src/: allocator.cpp  allocator.hpp  buffer.cpp  command.cpp  framebuffer.cpp  instance.cpp  logical_device.cpp  physical_device.cpp  pipeline.cpp  render_pass.cpp  swapchain.cpp
tests/: BUILD  CMakeLists.txt  vulkan.cpp
